--- a/art_node_api/src/App.css
+++ b/art_node_api/src/App.css
@@ -1,5 +1,7 @@
+
 .App {
   text-align: center;
+  background-color: #e8fefc;
 }
 
 .App-logo {
@@ -8,10 +10,10 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #e8fefc;
   height: 150px;
   padding: 20px;
-  color: white;
+  
 }
 
 .App-title {
