--- a/art_node_api/src/App.css
+++ b/art_node_api/src/App.css
@@ -4,21 +4,21 @@
   background-color: black;
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
-}
+} */
 
-.App-header {
-  background-color: #e8fefc;
+/* .App-header {
+  
   height: 150px;
   padding: 20px;
   
-}
+} */
 
-.App-title {
+/* .App-title {
   font-size: 1.5em;
-}
+} */
 
 .App-intro {
   font-size: large;
